--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   crypto: ^3.0.3
   dart_frog: ^1.0.0
   equatable: ^2.0.5
+  firedart: ^0.9.8
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
   meta: ^1.15.0
