--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
   meta: ^1.15.0
+  mongo_dart: ^0.10.3
+  postgres: ^3.2.1
 
 dev_dependencies:
   mocktail: ^1.0.0
