--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   build_runner: ^2.4.9
   crypto: ^3.0.3
-  dart_frog: ^1.0.0
+  dart_frog: ^1.1.0
+  dart_frog_cli: ^1.2.3
   equatable: ^2.0.5
   firedart: ^0.9.8
   json_annotation: ^4.9.0
