--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,10 @@ dependencies:
   dart_frog: ^1.1.0
   dart_frog_auth: ^1.1.0
   dart_frog_cli: ^1.2.3
+  dart_frog_web_socket: ^1.0.0
   equatable: ^2.0.5
   firedart: ^0.9.8
+  http: ^1.2.2
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
   meta: ^1.15.0
